--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -61,10 +61,6 @@ table.school-classes {
   background-color: rgba(221, 198, 231, 0.4) !important;
 }
 
-.btn-primary, .badge-primary, .btn-info, .btn-primary.disabled, .btn-primary:hover {
-  color: #fff;
-}
-
 .navbar-brand, .display-1, .display-2, .display-3, .display-4, .display-5 {
   font-family: 'Oleo Script Swash Caps', cursive;
 }
